tests/testfiles/validated/invalid_programs/604_function_definition_duplicata.c
int foo(int a, int b){return 0;};

int foo(int a, int b){return 1;}; 
